	the new background color of the image.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:

	Use newer, cool icons from Lapo Calamandrei
	<calamandrei@gmail.com> for network light.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/network-light-desc.xml:

	Append a '/' to icon URL.

2007-09-03  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Put icons handling into a separate module.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:

	Put plenty of space around the light-bulb image.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:
	* src/network-light-gui.c:

	Double-click inverts the light-bulb status.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/network-light-gui.h:

	Use int for load_level and use CLAMP macro to keep it under limits.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:
	* src/network-light-gui.c:

	Add popup menu.

2007-09-01  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:

	Add about dialog.

2007-09-01  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/gupnp-network-light.glade:
	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light.c:

	Use glade for consistancy.

2007-09-01  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:

	New cool icons for network-light from Lapo Calamandrei
	<calamandrei@gmail.com>.

2007-08-31  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-on.png:

	Use image from Markus Berg <markus.berg@tkk.fi> for "on".

2007-08-31  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am: