@@ -183,8 +183,10 @@ remove_device (GUPnPDeviceInfo *info)
         if (!gtk_tree_model_get_iter_first (model, &root_iter))
                 return;
 
-        if (find_device (model, udn, &root_iter, &iter))
+        if (find_device (model, udn, &root_iter, &iter)) {
+                unschedule_icon_update (info);
                 gtk_tree_store_remove (GTK_TREE_STORE (model), &iter);
+        }
 }
 
 static void
@@ -365,6 +367,8 @@ append_device_tree (GUPnPDeviceInfo *info,
                                                    2, info, -1);
                 g_free (friendly_name);
 
+                schedule_icon_update (info);
+
                 /* Append the embedded devices */
                 for (child = gupnp_device_info_list_devices (info);
                      child;
@@ -419,6 +423,36 @@ append_device (GUPnPDeviceInfo *info)
                                         first_row,
                                         FALSE);
                 }
+        }
+}
+
+void
+update_device_icon (GUPnPDeviceInfo *info,
+                    GdkPixbuf       *icon)
+{
+        GtkWidget    *treeview;
+        GtkTreeModel *model;
+        GtkTreeIter   root_iter;
+        GtkTreeIter   device_iter;
+        const char   *udn;
+
+        treeview = glade_xml_get_widget (glade_xml, "device-treeview");
+        g_assert (treeview != NULL);
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        g_assert (model != NULL);
+
+        udn = gupnp_device_info_get_udn (info);
+
+        if (!gtk_tree_model_get_iter_first (model, &root_iter))
+                return;
+
+        if (find_device (model, udn, &root_iter, &device_iter)) {
+                gtk_tree_store_set (GTK_TREE_STORE (model),
+                                    &device_iter,
+                                    0, icon,
+                                    -1);
+        } else {
+                g_object_unref (icon);
         }
 }
 
